// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareImageButton > shows localized 413 share_image_content_too_large guidance instead of a bare Retry label > share-image-413-content-too-large 1`] = `
<div
  class="w-full min-w-[16rem] max-w-md"
  data-testid="share-image-error"
>
  <div
    aria-live="assertive"
    class="max-w-full overflow-hidden rounded-lg border px-4 py-3 border-danger/30 bg-danger/10 text-danger"
    data-alert-size="default"
    data-alert-tone="danger"
    role="alert"
  >
    <div
      class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
    >
      <div
        class="min-w-0"
      >
        <div
          class="text-sm font-semibold"
        >
          报告内容过长，无法生成分享图片
        </div>
        <div
          class="break-words text-sm [overflow-wrap:anywhere] mt-1 opacity-90"
        >
          <p>
            当前报告有 120000 个字符，超过分享图片上限 100000。可在设置中提高 SHARE_IMAGE_MAX_CHARS，或缩短报告后再试。
          </p>
          <p
            class="mt-2 text-sm leading-5 text-[hsl(var(--color-danger-alert-text))] opacity-90"
          >
            可在「报告 → 输出」提高 SHARE_IMAGE_MAX_CHARS，或缩短报告内容。
          </p>
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      >
        <button
          class="control-hit-target relative inline-flex cursor-pointer items-center justify-center gap-1.5 font-medium transition-[color,background-color,border-color,box-shadow,filter,opacity] duration-200 motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/25 focus-visible:ring-offset-0 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 disabled:transform-none h-5 min-w-5 rounded-md px-2 text-xs border border-danger/50 bg-danger/10 text-danger hover:bg-danger/15"
          data-control="button"
          data-size="compact"
          data-variant="danger-subtle"
          type="button"
        >
          重试
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShareImageButton > shows localized 503 share_image_unavailable install guidance > share-image-503-renderer-unavailable 1`] = `
<div
  class="w-full min-w-[16rem] max-w-md"
  data-testid="share-image-error"
>
  <div
    aria-live="assertive"
    class="max-w-full overflow-hidden rounded-lg border px-4 py-3 border-danger/30 bg-danger/10 text-danger"
    data-alert-size="default"
    data-alert-tone="danger"
    role="alert"
  >
    <div
      class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
    >
      <div
        class="min-w-0"
      >
        <div
          class="text-sm font-semibold"
        >
          分享图片引擎不可用
        </div>
        <div
          class="break-words text-sm [overflow-wrap:anywhere] mt-1 opacity-90"
        >
          <p>
            请检查转图工具是否已安装并可用。Playwright 引擎需要：cd apps/dsa-web && npm ci && npx playwright install chromium。
          </p>
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      >
        <button
          class="control-hit-target relative inline-flex cursor-pointer items-center justify-center gap-1.5 font-medium transition-[color,background-color,border-color,box-shadow,filter,opacity] duration-200 motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/25 focus-visible:ring-offset-0 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 disabled:transform-none h-5 min-w-5 rounded-md px-2 text-xs border border-danger/50 bg-danger/10 text-danger hover:bg-danger/15"
          data-control="button"
          data-size="compact"
          data-variant="danger-subtle"
          type="button"
        >
          重试
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShareImageButton > shows timeout guidance when share-image generation times out > share-image-timeout 1`] = `
<div
  class="w-full min-w-[16rem] max-w-md"
  data-testid="share-image-error"
>
  <div
    aria-live="assertive"
    class="max-w-full overflow-hidden rounded-lg border px-4 py-3 border-danger/30 bg-danger/10 text-danger"
    data-alert-size="default"
    data-alert-tone="danger"
    role="alert"
  >
    <div
      class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between"
    >
      <div
        class="min-w-0"
      >
        <div
          class="text-sm font-semibold"
        >
          连接上游服务超时
        </div>
        <div
          class="break-words text-sm [overflow-wrap:anywhere] mt-1 opacity-90"
        >
          <p>
            服务端访问外部依赖时超时，请稍后重试，或检查当前网络与代理设置。
          </p>
          <p
            class="mt-2 text-sm leading-5 text-[hsl(var(--color-danger-alert-text))] opacity-90"
          >
            上游服务响应超时。可稍后重试，或检查网络与代理设置。
          </p>
        </div>
      </div>
      <div
        class="flex shrink-0 items-center gap-2"
      >
        <button
          class="control-hit-target relative inline-flex cursor-pointer items-center justify-center gap-1.5 font-medium transition-[color,background-color,border-color,box-shadow,filter,opacity] duration-200 motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/25 focus-visible:ring-offset-0 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 disabled:transform-none h-5 min-w-5 rounded-md px-2 text-xs border border-danger/50 bg-danger/10 text-danger hover:bg-danger/15"
          data-control="button"
          data-size="compact"
          data-variant="danger-subtle"
          type="button"
        >
          重试
        </button>
      </div>
    </div>
  </div>
</div>
`;
